crates/reinhardt-pages/tests/ui/page/fail/controlled_bind_dynamic_type.rs
use reinhardt_pages::page;

fn main() {
	let _ = page!({
		input {
			a11y: off,
			type: String::from("text"),
			bind: ()
		}
	});
}
