crates/reinhardt-pages/tests/ui/page/fail/controlled_bind_dynamic_type.stderr
error: a bound input requires a static `type`
 --> tests/ui/page/fail/controlled_bind_dynamic_type.rs:8:10
  |
8 |             bind: ()
  |                   ^^
